# upgraded-giggle

./: README.md  pyproject.toml
_server/core/: models.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py  0002_rename_note_recipe.py  0003_remove_recipe_content_recipe_ingredients_and_more.py  0004_recipe_tags.py  0005_tag.py  0006_recipe_public_alter_recipe_ingredients.py  0007_alter_recipe_instructions.py  0008_recipe_events.py  0009_remove_recipe_events_event.py  0010_add_initial_recipes.py  0011_list.py
_server/core/templates/core/: index.html
_server/registration/: urls.py
_server/registration/templates/registration/: base.html
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.jsx  Calendar.jsx  Cookbook.jsx  NoteForm.jsx  Notebook.jsx  RecipeForm.jsx  SearchRecipes.jsx  ShoppingList.jsx  ViewRecipe.jsx  calendar.css  index.css  main.jsx
