[tool.poetry]
name = "recipe-planner"
version = "0.1.0"
description = ""
authors = ["Isaac Nielsen <isnielsen13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 || ^3.11"
django = "^5.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
